Replaced Dijkstra algorithm for A* to find the shortest number of moves to next row. TODO:  - Develop a way to prevent walls from "boxing" pawns, effectively preventing a player to reach it's objective;  - Study weight of features;

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -50,9 +50,9 @@
      <Compile Include="Assets\Scripts\Board\Link.cs" />
      <Compile Include="Assets\Scripts\Board\Tile.cs" />
      <Compile Include="Assets\Scripts\Counter.cs" />
-     <Compile Include="Assets\Scripts\GameAI\Game.cs" />
+     <Compile Include="Assets\Scripts\GameAI\Logic.cs" />
+     <Compile Include="Assets\Scripts\GameAI\MinimaxNode.cs" />
      <Compile Include="Assets\Scripts\GameAI\Move.cs" />
-     <Compile Include="Assets\Scripts\GameAI\Node.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\GamePieces\Pawn.cs" />
      <Compile Include="Assets\Scripts\GamePieces\Piece.cs" />
