--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,9 +50,9 @@
      <Compile Include="Assets\Scripts\Board\Link.cs" />
      <Compile Include="Assets\Scripts\Board\Tile.cs" />
      <Compile Include="Assets\Scripts\Counter.cs" />
-     <Compile Include="Assets\Scripts\GameAI\Game.cs" />
+     <Compile Include="Assets\Scripts\GameAI\Logic.cs" />
+     <Compile Include="Assets\Scripts\GameAI\MinimaxNode.cs" />
      <Compile Include="Assets\Scripts\GameAI\Move.cs" />
-     <Compile Include="Assets\Scripts\GameAI\Node.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\GamePieces\Pawn.cs" />
      <Compile Include="Assets\Scripts\GamePieces\Piece.cs" />
