--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -50,6 +50,7 @@
      <Compile Include="Assets\Editor\GameManagerEditor.cs" />
      <Compile Include="Assets\Editor\LinkEditor.cs" />
      <Compile Include="Assets\Editor\PawnEditor.cs" />
+     <Compile Include="Assets\Editor\TesterEditor.cs" />
      <Compile Include="Assets\Editor\TileEditor.cs" />
      <Compile Include="Assets\Editor\WallEditor.cs" />
      <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
