--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
      <Compile Include="Assets\Scripts\Board\Wall.cs" />
      <Compile Include="Assets\Scripts\GameAI\Minimax.cs" />
      <Compile Include="Assets\Scripts\GameAI\MinimaxNode.cs" />
+     <Compile Include="Assets\Scripts\Interfaces\IBestMoveAlgorithm.cs" />
      <Compile Include="Assets\Scripts\Libraries\Counter.cs" />
      <Compile Include="Assets\Scripts\Libraries\Names.cs" />
      <Compile Include="Assets\Scripts\Libraries\NamesUI.cs" />
