Checks for Game Over

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\AStar.cs" />
      <Compile Include="Assets\Scripts\Board\Edge.cs" />
      <Compile Include="Assets\Scripts\Board\GameBoard.cs" />
      <Compile Include="Assets\Scripts\Board\Move.cs" />
@@ -57,7 +58,7 @@
      <Compile Include="Assets\Scripts\CameraManager.cs" />
      <Compile Include="Assets\Scripts\GameAI\Minimax.cs" />
      <Compile Include="Assets\Scripts\GameAI\MinimaxNode.cs" />
-     <Compile Include="Assets\Scripts\Interfaces\IBestMoveAlgorithm.cs" />
+     <Compile Include="Assets\Scripts\Interfaces\IAlgorithm.cs" />
      <Compile Include="Assets\Scripts\Libraries\Counter.cs" />
      <Compile Include="Assets\Scripts\Libraries\Names.cs" />
      <Compile Include="Assets\Scripts\Libraries\NamesUI.cs" />
