--- a/FEUP-IART.CSharp.csproj
+++ b/FEUP-IART.CSharp.csproj
@@ -58,12 +58,6 @@
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Networking">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
@@ -88,6 +82,7 @@
     <Compile Include="Assets\Scripts\Libraries\Names.cs" />
     <Compile Include="Assets\Scripts\Libraries\NamesUI.cs" />
     <Compile Include="Assets\Scripts\Libraries\Tags.cs" />
+    <Compile Include="Assets\Scripts\Libraries\Utils.cs" />
     <Compile Include="Assets\Scripts\UI\SliderValue.cs" />
     <Compile Include="Assets\Scripts\UI\UIManager.cs" />
   </ItemGroup>
